--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
     </div>
 </section>
 <!-- scripts -->
+<div id="loader"></div>
+<div id="overlay-loader"></div>
 <script src="assets/scripts/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/js/swiper.min.js"></script>
 <script>
         // html elements
         const gallery = document.getElementById('moma');
+        const loader = document.getElementById('loader');
+        const overlayLoader = document.getElementById('overlay-loader');
+
+
         const link = document.querySelectorAll('.link')
         const title = document.getElementById('home');
 
@@ -71,6 +77,15 @@
 
         // swiper carousel
         window.onload = function(){
+
+            loader.setAttribute('class','loaded');
+            overlayLoader.setAttribute('class','loaded');
+
+
+
+
+            
+
             var swiper = new Swiper('.swiper-container', {
                 slidesPerView: 3,
                 spaceBetween: 30,
@@ -110,6 +125,7 @@
         }
 </script> 
 <!-- footer -->
+
 <footer>
     <div class="logo_holder">
         <img src="assets/images/pixabay-logo.png" alt="pixabay-logo" >
